# flightsim-fromscratch

./: .gitignore  CMakeLists.txt  Camera.cpp  FDMInterface.cpp  FDMInterface.h  Input.h  InputInterface.cpp  InputInterface.h  Model.cpp  Model.h  myprog.cpp  osg-notes.txt  setup-env
aircrafts-test/ball/: ball.xml  cannonball_init.xml
sfml-test/: osgviewerSFML  osgviewerSFML.cpp  sfml-example-old.cpp  sfml-test  sfml-test.cpp
